@@ -1,0 +1,6 @@
+package Bar;
+
+sub new { bless {} => shift }
+sub bar { 1 }
+
+1;
