@@ -1,0 +1,7 @@
+package Baz;
+
+use Role::Tiny;
+
+sub baz { 1 }
+
+1;
